# particle

./: .all-contributorsrc  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  __main__.py  azure-pipelines.yml  codecov.yml  environment.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.ci/: azure-steps.yml  azure-wheel.yml  azure-zipapp.yml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  pre-commit.yml
admin/: dump_pdgid_to_corsika7.py  dump_pdgid_to_lhcb.py  dump_pdgid_to_rapidsim.py
binder/: postBuild
docs/: CHANGELOG.md  CHANGELOG.rst
hepparticle/: __init__.py  version.py
hepparticle/pdgid/: __init__.py  functions.py
notebooks/: ConvertParticleDB.ipynb  GeneratePNames.ipynb  ParticleDemo.ipynb  particle
particle/: __init__.py  __main__.py  _version.py  exceptions.py  literals.py  shared_literals.py  version.py
particle/converters/: __init__.py  bimap.py  evtgen.py  geant.py  pythia.py
particle/data/: README.rst  __init__.py  conversions.csv  conversions.fwf  mass_width_2008.fwf  mass_width_2008_ext.fwf  mass_width_2017.mcd  mass_width_2018.mcd  mass_width_2019.mcd  nuclei2020.csv  particle2008.csv  particle2018.csv  particle2019.csv  pdgid_to_evtgenname.csv  pdgid_to_geant3id.csv  pdgid_to_geantid.csv  pdgid_to_latex.csv  pdgid_to_latexname.csv  pdgid_to_pythiaid.csv  pdgname_to_evtgenname.csv
particle/geant/: __init__.py  geant3id.py  geantid.py
particle/particle/: __init__.py  convert.py  enums.py  kinematics.py  literals.py  particle.py  regex.py  utilities.py
particle/pdgid/: __init__.py  functions.py  literals.py  pdgid.py
particle/pythia/: __init__.py  pythiaid.py
src/: __main__.py
src/particle/: __init__.py  __main__.py  _version.py  exceptions.py  mcid.py  shared_literals.py  typing.py
src/particle/_compat/: typing.py  warnings.py
src/particle/converters/: __init__.py  bimap.py  corsika.py  evtgen.py  geant.py  lhcb.py  pythia.py
src/particle/corsika/: __init__.py  corsika7id.py  gen_conversion_table.py
src/particle/data/: README.rst  __init__.py  conversions.csv  mass_width_2008_ext.fwf  mass_width_2020.mcd  mass_width_2021.mcd  mass_width_2022.mcd  mass_width_2023.mcd  mass_width_2024.mcd  mass_width_2024.txt  mass_width_2025.mcd  mass_width_2025.txt  mass_width_2026.txt  mass_width_extended.fwf  nuclei2020.csv  nuclei2022.csv  nuclei2026.csv  particle2008.csv  particle2018.csv  particle2019.csv  particle2020.csv  particle2021.csv  particle2022.csv  particle2023.csv  particle2024.csv  particle2025.csv  particle2026.csv  pdgid_to_corsika7id.csv  pdgid_to_evtgenname.csv  pdgid_to_geant3id.csv  pdgid_to_latexname.csv  pdgid_to_lhcbname.csv  pdgid_to_pythiaid.csv
src/particle/geant/: __init__.py  geant3id.py
src/particle/lhcb/: __init__.py  converters.py  functions.py  particle.py  utils.py
src/particle/lhcb/converters/: __init__.py  lhcb.py
src/particle/lhcb/data/: __init__.py  pdgid_to_lhcbname.csv
src/particle/particle/: __init__.py  convert.py  enums.py  kinematics.py  literals.py  particle.py  regex.py  utilities.py  version.pyi
src/particle/pdgid/: __init__.py  functions.py  literals.py  pdgid.py
src/particle/pythia/: __init__.py  pythiaid.py
src/particle/rapidsim/: __init__.py  converters.py  functions.py
src/particle/rapidsim/data/: __init__.py  pdgid_to_rapidsimname.csv
tests/: __init__.py  conftest.py  test_cli.py  test_hepparticle.py  test_mcid.py  test_module_apis.py  test_package.py
tests/__pycache__/: tmpixt5b2ob  tmprwazhfdz  tmpsi4saj15
tests/converters/: __init__.py  conftest.py  test_corsika.py  test_deprecated.py  test_maps.py
tests/converters/__pycache__/: tmp0vwns8fb
tests/corsika/: test_corsika7id.py  test_gen_conversion_table.py
tests/data/: README.rst  test_PDG_mcd_file_duplicates.mcd  test_PDG_txt_file_duplicates.txt
tests/geant/: test_geant3id.py  test_geantid.py
tests/geantid/: test_geantid.py
tests/lhcb/: test_lhcb_name.py  test_particle.py
tests/particle/: __init__.py  test_convert.py  test_decfilenames.py  test_enums.py  test_generation.py  test_kinematics.py  test_literals.py  test_particle.py  test_performance.py  test_utilities.py
tests/particle/__pycache__/: tmp0_3y7w65  tmp4zciqrw8  tmp89pj5g8n  tmp93r7slbj  tmpa3m3pomr  tmphzod6_x8  tmpsb3po0mx  tmpwq_pp0ls
tests/pdgid/: __init__.py  test_functions.py  test_literals.py  test_pdgid.py
tests/pdgid/__pycache__/: tmpdo57832l  tmpv__1bikc
tests/pythia/: __init__.py  test_pythiaid.py
tests/rapidsim/: test_rapidsim_name.py
tests/utils/: pdgids.py
