[bdist_wheel]
universal=1

[metadata]
name = particle
author = Eduardo Rodrigues
author_email = eduardo.rodrigues@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
description = PDG particle data and identification codes
long_description = file: README.rst
url = https://github.com/scikit-hep/particle
license = BSD 3-Clause License
keywords =
    HEP
    PDG
    PDGID
    particle
    particle properties
    particle data table
    MC identification codes

classifiers =
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable

[options]
python_requires = >=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4
install_requires =
    enum34>=1.1; python_version<"3.4"
    importlib_resources>=1.0; python_version<"3.7"
    attrs>=19.2
    hepunits>=1.1.0
packages = find:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where=src

[options.package_data]
* = *.csv, *.fwf, *.mcd


[options.extras_require]
test =
    pytest
    pandas; python_version>"3.4"
    tabulate
dev =
    pandas; python_version>"3.4"
    tabulate
    check-manifest>=0.39
    black==19.10b0

[tool:pytest]
testpaths =
    tests
junit_family=xunit2

[check-manifest]
ignore =
    src/particle/version.py
