[metadata]
name = particle
description = Extended PDG particle data and MC identification codes
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/particle
author = Eduardo Rodrigues
author_email = eduardo.rodrigues@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    HEP
    PDG
    PDGID
    particle
    particle properties
    particle data table
    MC identification codes

[options]
packages = find:
install_requires =
    attrs>=19.2
    deprecated
    hepunits>=2.0.0
    enum34>=1.1;python_version<"3.4"
    importlib_resources>=2.0;python_version<"3.9"
    typing>=3.7;python_version<"3.5"
    typing_extensions;python_version<"3.8"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
all =
    check-manifest>=0.42
    pytest
    tabulate
    pandas;python_version>"3.4"
dev =
    check-manifest>=0.42
    pytest
    tabulate
    pandas;python_version>"3.4"
test =
    pytest
    pytest-cov
    tabulate
    pandas;python_version>"3.4"

[options.package_data]
* = *.csv, *.fwf, *.mcd, *.py.typed

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths =
    tests
junit_family = xunit2
addopts = '-Wd'
