[metadata]
name = particle
description = Extended PDG particle data and MC identification codes
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/particle
author = Eduardo Rodrigues
author_email = eduardo.rodrigues@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
keywords =
    HEP
    PDG
    PDGID
    particle
    particle properties
    particle data table
    MC identification codes

[options]
packages = find:
install_requires =
    attrs>=19.2
    hepunits>=2.0.0
    importlib-resources>=2.0;python_version<"3.9"
    typing-extensions;python_version<"3.8"
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
all =
    check-manifest>=0.42
    pandas
    pytest>=6
    pytest-benchmark
    tabulate
dev =
    check-manifest>=0.42
    pandas
    pytest>=6
    pytest-benchmark
    tabulate
test =
    pandas
    pytest>=6
    pytest-benchmark
    pytest-cov
    tabulate

[options.package_data]
* = *.csv, *.fwf, *.mcd, *.py.typed

[flake8]
max-complexity = 24
extend-ignore = E501, E402, B950
extend-select = B,B9
